fixed buttons position on mobile layout. other small fixes

--- a/src/sass/_one-room-for-two-adults.scss
+++ b/src/sass/_one-room-for-two-adults.scss
@@ -26,7 +26,7 @@
     @include tablet {
         position: absolute;
         z-index: 2;
-        top: 0px;
+        top: -20px;
         left: 512px;
         justify-content: flex-start;
     }
@@ -34,7 +34,7 @@
     @include desktop {
         position: absolute;
         z-index: 2;
-        top: 0px;
+        top: -20px;
         left: 580px;
         justify-content: flex-start;
     }
@@ -183,7 +183,7 @@
 .buttons-container {
     align-items: center;
     justify-content: center;
-    width: 255px;
+    width: 100%;
     height: 255px;
     display: flex;
     flex-direction: column;
@@ -199,10 +199,11 @@
 }
 
 .hotel-button {
+
     box-sizing: border-box;
     width: 236px;
     height: 48px;
-    background: #000000;
+    background-color: #000000;
     border: 2px solid #FFFFFF;
     border-radius: 25px;
 
@@ -210,8 +211,15 @@
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
     letter-spacing: 0.02em;
 
     color: #F3C653;
+
+
+    &:hover,
+    &.hotel-button:focus {
+        background-color: $white-color;
+        border-color: #F3C653;
+}
 }
